--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2645,6 +2645,16 @@ input[type=color] {
 .tp-slider__section {
   margin-bottom: -70px;
 }
+.tp-slider__section .swiper {
+  width: 100%;
+  height: 100%;
+}
+.tp-slider__section .swiper-wrapper {
+  width: 100%;
+}
+.tp-slider__section .swiper-slide {
+  width: 100%;
+}
 @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px) {
   .tp-slider__section {
     margin-bottom: -15px;
@@ -2780,14 +2790,79 @@ input[type=color] {
     left: 10px;
   }
 }
-.tp-slider__arrows button.slick-next {
+.tp-slider__arrows button.slick-next,
+.tp-slider__arrows .swiper-button-next {
   left: auto;
   right: 30px;
   z-index: 11;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .tp-slider__arrows button.slick-next {
+  .tp-slider__arrows button.slick-next,
+  .tp-slider__arrows .swiper-button-next {
     right: 10px;
+  }
+}
+.tp-slider__arrows .swiper-button-prev,
+.tp-slider__arrows .swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: auto;
+  height: auto;
+  margin: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 50px;
+  font-weight: 300;
+  color: var(--tp-common-white);
+}
+.tp-slider__arrows .swiper-button-prev {
+  left: 30px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .tp-slider__arrows .swiper-button-prev {
+    left: 10px;
+  }
+}
+.tp-slider__arrows .swiper-button-prev:after,
+.tp-slider__arrows .swiper-button-next:after {
+  display: none;
+}
+/* Home Banner Pagination */
+.tp-slider__pagination {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  text-align: center;
+}
+.tp-slider__pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin: 0 6px;
+  opacity: 1;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.tp-slider__pagination .swiper-pagination-bullet-active {
+  background-color: var(--tp-common-white);
+  width: 30px;
+  border-radius: 6px;
+}
+@media (max-width: 767px) {
+  .tp-slider__pagination {
+    bottom: 20px;
+  }
+  .tp-slider__pagination .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    margin: 0 4px;
+  }
+  .tp-slider__pagination .swiper-pagination-bullet-active {
+    width: 24px;
   }
 }
 .tp-slider__dot {
@@ -6804,6 +6879,11 @@ input[type=color] {
 }
 .tp-feature__item p {
   margin-bottom: 0;
+}
+
+.tp-feature-2__section {
+  position: relative;
+  z-index: 2;
 }
 
 .tp-feature-2__section .row [class*=col-]:first-child .tp-feature-2__item {
